Fix seeding Markdown resource files not being readable when application is run as a jar.